# ucimf

./: AUTHORS  Makefile.am  README.md  configure.ac
console/dummy/: Makefile.am  configure.ac  console02.cpp  console03.cpp  font01.cpp  font01.h
console/fbterm_ucimf/: ChangeLog  Makefile.am  README  configure.ac  debug.h  fbterm_ucimf.cpp  font.cpp  font.h  imapi.c  imapi.h  immessage.h  inputmethod.txt  instance.h  keycode.c  keycode.h  screen.cpp  screen.h  screen_render.cpp
console_app/dummy/: Makefile.am  configure.ac  console.cpp  go_test_env.sh
iiimccf/: AUTHORS  Makefile  Makefile.am  README  TODO  a.out  basefont.cpp  basefont.h  configure.ac  console-app.cpp  console.cpp  console.h  font-bak.cpp  font-bak2.cpp  font.cpp  font.h  graphdev.cpp  graphdev.h  iiimccf-commit.cpp  iiimccf-component.cpp  iiimccf-core.cpp  iiimccf-int.h  iiimccf-lookup_choice.cpp  iiimccf-preedit.cpp  iiimccf-util.cpp  iiimccf.c  iiimccf.conf.xml  iiimccf.cpp  iiimccf.h  inputclient.cpp  inputclient.h  keycodes.h  layer.cpp  layer.h  overspot.cpp  overspot.h  overspotclient.cpp  overspotclient.h  test-font.cpp  test-freetype.cpp
iiimccf/branches/iiimccf-ov-branch/: Makefile2  lookupchoice.h  observer.h  openvanilla.cpp  openvanilla.h  preedit.h
iiimccf/display/: fbdev.h  fblinear15.cpp  fblinear16.cpp  fblinear16.h  fblinear24.cpp  fblinear24.h  fblinear32.cpp  fblinear32.h  fblinear4.cpp  fblinear8.cpp  fblinear8.h  libggi.h
iiimccf/document/: iiimccf-uml.xmi  iiimccf.xmi  layer.xmi  zhcon-structure.xmi
iiimccf/iiimccf-cpp/: iiimccf.cpp  iiimccf.h
iiimccf/obselete/: global.h  hzdecoder.cpp  inputclient.cpp  inputclient.h  overspotclient.cpp  overspotclient.h  window.cpp  window.h
iiimccf/tags/release-1.0/: ChangeLog  font.cpp  iiimccf-int.h  iiimccf-util.cpp  observer.cpp
iiimccf/test/: Makefile  test-basefont.cpp  test-font.cpp  test-freetype.cpp
iiimccf/trunk/: Arch.xmi  ChangeLog  Makefile.am  README  TODO  configure.ac  console-app.c  cwm.cpp  cwm.h  font.cpp  font.h  graphdev.cpp  graphdev.h  graphport.cpp  graphport.h  iiimccf-component.cpp  iiimccf-core.cpp  iiimccf-int.h  iiimccf-lookup_choice.cpp  iiimccf-preedit.cpp  iiimccf.cpp  iiimccf.h  imf.cpp  imf.h  layer.cpp  layer.h  observer.cpp  observer.h  openvanilla.cpp  openvanilla.h  overspot.cpp  overspot.h  preedit.h  shape.cpp  shape.h  subject_observer.cpp  subject_observer.h  type.cpp  type.h  ucimf.cpp  (+5 more)
iiimccf/trunk/display/: fbdev.h  fblinear16.cpp  fblinear16.h  fblinear24.cpp  fblinear24.h  fblinear32.cpp  fblinear32.h  fblinear8.cpp  fblinear8.h  font.cpp  font.h
iiimccf/trunk/dummy/: dummy.cpp  dummy.h
iiimccf/trunk/iiimf/: Makefile.am  iiimccf.cpp  iiimccf.h
iiimccf/trunk/openvanilla/: Makefile.am  openvanilla.cpp  openvanilla.h
imf/dummy/: Makefile.am  configure.ac  dummy.cpp  dummy.h
imf/dummy/debian/: README.Debian  changelog  control  copyright  files  rules  ucimf-dummy.dirs
imf/iiimf/: ChangeLog  Makefile.am  NEWS  configure.ac  iiimccf.cpp  iiimccf.h
imf/iiimf/debian/: control  ucimf-iiimf.substvars
imf/openvanilla/: Makefile.am  configure.ac  openvanilla.cpp  openvanilla.h
imf/openvanilla/debian/: changelog  control  copyright  files  ucimf-openvanilla.install
iterm/: INSTALL  (+7 more)
iterm/lib/: ChangeLog  Makefile.am  Makefile.in  README  README.jp  README.zh_CN  aclocal.m4  config.h.in  configure  configure.in  configure.scan  mkinstalldirs
iterm/lib/docs/: Doxyfile
iterm/lib/include/: Makefile.am  Makefile.in
iterm/lib/src/: Makefile.am  Makefile.in  core.c  dummy_layout.c  mbchar.h  screen.c  screen_buffer.c  screen_buffer.h  screen_internal.h  screen_row.c  screen_row.h  screen_visual_row.c  screen_visual_row.h  state.c  state.h  tabs.c  tabs.h  vt100.c  vt100.h
jfbterm/: .cvsignore  Makefile.am  Makefile.in  README  README.ja  aclocal.m4  config.h.in  configure  configure.in  csv.c  fbcommon.h  fbdpsp.c  getcap.c  getcap.h  input.c  input.h  jfbterm.conf.sample  jfbterm.conf.sample.ja  main.c  message.h  pcf.c  pen.h  term.c  terminfo.jfbterm  util.h
jfbterm/fonts/CVS/: Entries  Repository  Root
libucimf/: AUTHORS  ChangeLog  INSTALL  Makefile.am  README  TODO  configure.ac  cwm.cpp  cwm.h  font.cpp  graphdev.cpp  graphdev.h  graphport.cpp  libucimf-uninstalled.pc.in  libucimf.pc.in  options.cpp  shape.cpp  type.cpp  ucimf  ucimf.conf  ucimf.conf.example  ucimf.cpp  ucimf_keyboard.cpp  ucimf_start  ucimf_start.in
libucimf/debian/: README.Debian  changelog  control  libucimf.dirs  libucimf.install  ucimf-dev.install
libucimf/display/: Makefile.am  fbdev.cpp  fbdev.h  fblinear16.cpp  fblinear24.cpp  fblinear24.h  fblinear32.cpp  fblinear32.h  fblinear4.cpp  fblinear4.h  fblinear8.cpp  fblinear8.h  fbvgaplanes.cpp  fbvgaplanes.h  graphdev.cpp  graphdev.h  libggi.cpp  vgadev.cpp  vgadev.h
libucimf/fbterm_ucimf/: ChangeLog  Makefile.am  fbterm_ucimf.cpp  imapi.c  imapi.h
libucimf/font/: Makefile.am  font.cpp  font.h  instance.h  main-cpp.cpp
libucimf/fonts/: unifont.pcf
libucimf/include/: debug.h
libucimf/include/imf/: graphport.h  imf.h  type.h  widget.h
libucimf/man/: Makefile.am  ucimf.1  ucimf.conf.5  ucimf_start.1
libucimf/sample/: Makefile.am
libucimf/sample/imf/: Makefile.am  dummy.cpp  dummy.h
libucimf/sample/term/: console01.cpp  console04.cpp
libucimf/src/: Makefile.am  cwm.cpp  options.cpp  shape.cpp  type.cpp  ucimf.cpp  widget.cpp  window.cpp
ucimf-openvanilla/: AUTHORS  ChangeLog  Makefile.am  README  configure.ac  debug.h  openvanilla.cpp
ucimf-openvanilla/debian/: changelog  control
ucimf-openvanilla/src/: Makefile.am  openvanilla.cpp  openvanilla.h  ovimf.cpp
ucimf-sunpinyin/: Makefile  configure.ac
ucimf-sunpinyin/src/: Makefile.am  sunpinyin.h
ucimf/trunk/: AUTHORS  ChangeLog  LICENSE  Makefile.am  configure.ac  cwm.cpp  cwm.h  font.cpp  font.h  graphdev.cpp  graphdev.h  graphport.cpp  options.cpp  options.h  shape.cpp  shape.h  type.cpp  ucimf.conf  ucimf.conf.example  ucimf.cpp  ucimf_keyboard.cpp  unicode-console  widget.cpp  window.cpp
ucimf/trunk/debian/: changelog  control  files  ucimf.dirs  ucimf.substvars
(+480 files in other folders)
